--- a/index.html
+++ b/index.html
@@ -2,11 +2,14 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <meta hpttp-equip="x-UA-compatib"  content="IE*edge">
+        <meta hpttp-equip="x-UA-compatible"  content="IE-edge">
         <meta name="viewport" contec="widt=width,initial-scale=1.0">
         <tittle>mi pagina</tittle>
         </head>
         <body>
+<h1>segunda aplicación</h1>
+<h2>tercera aplicación</h2>
+<h3>cuarta aplicación</h3>
 
 
         </body>
